Fixed a CSS with the scrollbar not disappearing (disable overflow: auto).

--- a/public_html/assets/styles/styles.css
+++ b/public_html/assets/styles/styles.css
@@ -199,7 +199,6 @@ main {
     font-size: 1.2em;
     box-sizing: border-box;
     z-index: 1;
-    overflow: auto;
 }
 
 article {
